Kubernetes Manifest/alb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      containers:
      - name: aws-load-balancer-controller
        image: docker.io/amazon/aws-load-balancer-controller:v2.7.2
        args:
        - --ingress-class=alb
        - --cluster-name=EKScluster 
        - --aws-vpc-id=vpc-0846ab95731609872 # Замените на ID вашей VPC
        - --aws-region=us-west-2
