Kubernetes Manifest/02-APPservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
spec:
  selector:
    app: pacman1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
